--- a/Makefile.deps
+++ b/Makefile.deps
@@ -10,13 +10,19 @@ $(SRC)/whmenu.$o: $(SRC)/whmenu.c $(icorp_h)
 $(SRC)/whnet.$o: $(SRC)/whnet.c $(icorp_h) $(EINC)/mmulti.h
 $(SRC)/whobj.$o: $(SRC)/whobj.c $(icorp_h)
 $(SRC)/whplr.$o: $(SRC)/whplr.c $(icorp_h)
-$(SRC)/whsndmod.$o: $(SRC)/whsndmod.c $(icorp_h)
+$(SRC)/whsndmod.$o: $(SRC)/whsndmod.c $(icorp_h) $(AUDIOLIBROOT)/include/fx_man.h
 $(SRC)/whtag.$o: $(SRC)/whtag.c $(icorp_h)
 $(SRC)/version.$o: $(SRC)/version.c
 $(SRC)/version-auto.$o: $(SRC)/version-auto.c
 
 $(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(EINC)/build.h $(EINC)/winlayer.h $(EINC)/compat.h $(INC)/startwin.h $(INC)/gameres.h
 $(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(EINC)/build.h $(EINC)/baselayer.h $(EINC)/compat.h $(INC)/startwin.h
+
+# Derived source files from art assets
+$(RSRC)/startgtk_game_gresource.c: $(RSRC)/startgtk_game.gresource.xml $(RSRC)/game.png $(RSRC)/startgtk_game.glade
+$(RSRC)/startgtk_game_gresource.h: $(RSRC)/startgtk_game.gresource.xml
+$(RSRC)/sdlappicon_game.c: $(RSRC)/game.png
+$(RSRC)/sdlappicon_game.$o: $(RSRC)/sdlappicon_game.c
 
 $(SRC)/gameres.$(res): $(SRC)/gameres.rc $(INC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
 $(SRC)/buildres.$(res): $(SRC)/buildres.rc $(EINC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
