--- a/Makefile.deps
+++ b/Makefile.deps
@@ -1,13 +1,13 @@
-icorp_h=$(INC)/icorp.h $(EINC)/build.h $(EINC)/pragmas.h $(EINC)/cache1d.h $(EINC)/baselayer.h $(INC)/names.h $(INC)/sndmod.h $(INC)/les.h $(INC)/jeff.h $(INC)/raf.h $(INC)/whdefs.h $(INC)/keydefs.h
+icorp_h=$(SRC)/icorp.h $(ENGINEINC)/build.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/cache1d.h $(ENGINEINC)/baselayer.h $(SRC)/names.h $(SRC)/sndmod.h $(SRC)/les.h $(SRC)/jeff.h $(SRC)/raf.h $(SRC)/whdefs.h $(SRC)/keydefs.h
 
-$(SRC)/b5compat.$o: $(SRC)/b5compat.c $(EINC)/build.h
-$(SRC)/config.$o: $(SRC)/config.c $(EINC)/compat.h $(EINC)/osd.h $(EINC)/scriptfile.h $(EINC)/baselayer.h $(EINC)/winlayer.h $(icorp_h)
+$(SRC)/b5compat.$o: $(SRC)/b5compat.c $(ENGINEINC)/build.h
+$(SRC)/config.$o: $(SRC)/config.c $(ENGINEINC)/compat.h $(ENGINEINC)/osd.h $(ENGINEINC)/scriptfile.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/winlayer.h $(icorp_h)
 $(SRC)/whani.$o: $(SRC)/whani.c $(icorp_h)
-$(SRC)/whaven.$o: $(SRC)/whaven.c $(icorp_h) $(INC)/startwin.h $(INC)/version.h
+$(SRC)/whaven.$o: $(SRC)/whaven.c $(icorp_h) $(SRC)/startwin.h $(SRC)/version.h
 $(SRC)/whfx.$o: $(SRC)/whfx.c $(icorp_h)
-$(SRC)/whinp.$o: $(SRC)/whinp.c $(icorp_h) $(INC)/keydefs.h
+$(SRC)/whinp.$o: $(SRC)/whinp.c $(icorp_h) $(SRC)/keydefs.h
 $(SRC)/whmenu.$o: $(SRC)/whmenu.c $(icorp_h)
-$(SRC)/whnet.$o: $(SRC)/whnet.c $(icorp_h) $(EINC)/mmulti.h
+$(SRC)/whnet.$o: $(SRC)/whnet.c $(icorp_h) $(ENGINEINC)/mmulti.h
 $(SRC)/whobj.$o: $(SRC)/whobj.c $(icorp_h)
 $(SRC)/whplr.$o: $(SRC)/whplr.c $(icorp_h)
 $(SRC)/whsndmod.$o: $(SRC)/whsndmod.c $(icorp_h) $(AUDIOLIBROOT)/include/fx_man.h
@@ -15,8 +15,10 @@ $(SRC)/whtag.$o: $(SRC)/whtag.c $(icorp_h)
 $(SRC)/version.$o: $(SRC)/version.c
 $(SRC)/version-auto.$o: $(SRC)/version-auto.c
 
-$(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(EINC)/build.h $(EINC)/winlayer.h $(EINC)/compat.h $(INC)/startwin.h $(INC)/gameres.h
-$(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(EINC)/build.h $(EINC)/baselayer.h $(EINC)/compat.h $(INC)/startwin.h
+$(SRC)/whbuild.$o: $(SRC)/whbuild.c $(build_h) $(ENGINEINC)/editor.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/cache1d.h $(SRC)/names.h
+
+$(SRC)/startwin_game.$o: $(SRC)/startwin_game.c $(ENGINEINC)/build.h $(ENGINEINC)/winlayer.h $(ENGINEINC)/compat.h $(SRC)/startwin.h $(SRC)/gameres.h
+$(SRC)/startgtk_game.$o: $(SRC)/startgtk_game.c $(ENGINEINC)/build.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/compat.h $(SRC)/startwin.h
 
 # Derived source files from art assets
 $(RSRC)/startgtk_game_gresource.c: $(RSRC)/startgtk_game.gresource.xml $(RSRC)/game.png $(RSRC)/startgtk_game.glade
@@ -24,6 +26,6 @@ $(RSRC)/startgtk_game_gresource.h: $(RSRC)/startgtk_game.gresource.xml
 $(RSRC)/sdlappicon_game.c: $(RSRC)/game.png
 $(RSRC)/sdlappicon_game.$o: $(RSRC)/sdlappicon_game.c
 
-$(SRC)/gameres.$(res): $(SRC)/gameres.rc $(INC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
-$(SRC)/buildres.$(res): $(SRC)/buildres.rc $(EINC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
+$(SRC)/gameres.$(res): $(SRC)/gameres.rc $(SRC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
+$(SRC)/buildres.$(res): $(SRC)/buildres.rc $(ENGINEINC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
 
