ci: only retain the .exe artifacts when building the master branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,4 +75,4 @@ jobs:
           path: |
             whaven.exe
             build.exe
-        if: ${{ matrix.use_polymost == 1 && matrix.use_opengl == 1 }}
+        if: ${{ github.ref == 'refs/heads/master' && matrix.use_polymost == 1 && matrix.use_opengl == 1 }}
