--- a/Makefile.deps
+++ b/Makefile.deps
@@ -10,6 +10,7 @@ $(SRC)/whmenu.$o: $(SRC)/whmenu.c $(icorp_h)
 $(SRC)/whnet.$o: $(SRC)/whnet.c $(icorp_h) $(ENGINEINC)/mmulti.h
 $(SRC)/whobj.$o: $(SRC)/whobj.c $(icorp_h)
 $(SRC)/whplr.$o: $(SRC)/whplr.c $(icorp_h)
+$(SRC)/whsmk.$o: $(SRC)/whsmk.c $(icorp_h) $(AUDIOLIBROOT)/include/fx_man.h
 $(SRC)/whsndmod.$o: $(SRC)/whsndmod.c $(icorp_h) $(AUDIOLIBROOT)/include/fx_man.h
 $(SRC)/whtag.$o: $(SRC)/whtag.c $(icorp_h)
 $(SRC)/version.$o: $(SRC)/version.c
