--- a/Makefile.deps
+++ b/Makefile.deps
@@ -13,6 +13,7 @@ $(SRC)/whplr.$o: $(SRC)/whplr.c $(icorp_h)
 $(SRC)/whsmk.$o: $(SRC)/whsmk.c $(icorp_h) $(AUDIOLIBROOT)/include/fx_man.h
 $(SRC)/whsndmod.$o: $(SRC)/whsndmod.c $(icorp_h) $(AUDIOLIBROOT)/include/fx_man.h
 $(SRC)/whtag.$o: $(SRC)/whtag.c $(icorp_h)
+$(SRC)/datascan.$o: $(SRC)/datascan.c $(ENGINEINC)/compat.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/cache1d.h $(ENGINEINC)/build.h $(SRC)/datascan.h
 $(SRC)/version.$o: $(SRC)/version.c
 $(SRC)/version-auto.$o: $(SRC)/version-auto.c
 
@@ -26,6 +27,8 @@ $(RSRC)/startgtk_game_gresource.c: $(RSRC)/startgtk_game.gresource.xml $(RSRC)/g
 $(RSRC)/startgtk_game_gresource.h: $(RSRC)/startgtk_game.gresource.xml
 $(RSRC)/sdlappicon_game.c: $(RSRC)/game.png
 $(RSRC)/sdlappicon_game.$o: $(RSRC)/sdlappicon_game.c
+$(RSRC)/palette.c: $(RSRC)/palette.dat
+$(RSRC)/palette.$o: $(RSRC)/palette.c
 
 $(SRC)/gameres.$(res): $(SRC)/gameres.rc $(SRC)/gameres.h $(RSRC)/game.bmp $(RSRC)/game_icon.ico $(RSRC)/game.manifest
 $(SRC)/buildres.$(res): $(SRC)/buildres.rc $(ENGINEINC)/buildres.h $(RSRC)/build.bmp $(RSRC)/build_icon.ico $(RSRC)/build.manifest
