--- a/src/gameres.rc
+++ b/src/gameres.rc
@@ -32,7 +32,9 @@ FONT 8, "MS Shell Dlg", 0, 0, 1
     CONTROL         "", IDC_STARTWIN_TABCTL, WC_TABCONTROL, WS_TABSTOP | WS_CLIPSIBLINGS, 87, 7, 257, 180, WS_EX_LEFT | WS_EX_CONTROLPARENT
     AUTOCHECKBOX    "&Always show configuration on start", IDC_ALWAYSSHOW, 12, 202, 140, 8, WS_TABSTOP, WS_EX_LEFT
     CONTROL         IDB_BMP, IDC_STATIC, WC_STATIC, SS_BITMAP, 22, 7, 43, 39, WS_EX_LEFT
-    CTEXT           "JFWitchaven", IDC_STATIC, 12, 52, 65, 15, SS_CENTER, WS_EX_LEFT
+    CTEXT           "JFWitchaven", IDC_STARTWIN_APPTITLE, 12, 52, 65, 15, SS_CENTER, WS_EX_LEFT
+    LTEXT           "Version xxxxxxx\nDate", IDC_STARTWIN_APPVERSION, 12, 150, 65, 18, 0, WS_EX_LEFT
+    CONTROL         "<A HREF=""http://www.jonof.id.au/capstone"">Website</A>", IDC_STARTWIN_APPLINK, WC_LINK, WS_TABSTOP, 12, 175, 65, 15, WS_EX_LEFT
 }
 
 
@@ -50,6 +52,9 @@ FONT 8, "MS Shell Dlg", 0, 0, 1
     LTEXT           "Input devices:", IDC_STATIC, 7, 45, 52, 9, WS_CHILD | WS_VISIBLE, WS_EX_LEFT
     AUTOCHECKBOX    "Mo&use", IDC_USEMOUSE, 75, 45, 40, 8, WS_TABSTOP, WS_EX_LEFT
     AUTOCHECKBOX    "&Joystick", IDC_USEJOYSTICK, 115, 45, 40, 8, WS_TABSTOP, WS_EX_LEFT
+    LTEXT           "Import game data:", IDC_STATIC,             5, 152, 100, 9, NOT WS_GROUP | SS_LEFT, WS_EX_LEFT
+    PUSHBUTTON      "C&hoose a location...", IDC_CHOOSEIMPORT, 115, 148, 75, 15, 0, WS_EX_LEFT
+    PUSHBUTTON      "&More info", IDC_IMPORTINFO,              195, 148, 55, 15, 0, WS_EX_LEFT
 }
 
 
@@ -60,6 +65,32 @@ STYLE DS_CONTROL | DS_SHELLFONT | WS_CHILDWINDOW
 FONT 8, "MS Shell Dlg", 0, 0, 1
 {
     EDITTEXT        IDC_MESSAGES, 0, 0, 252, 164, WS_VSCROLL | NOT WS_BORDER | NOT WS_TABSTOP | ES_MULTILINE | ES_READONLY, WS_EX_LEFT
+}
+
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDD_IMPORTINFO DIALOGEX 20, 40, 300, 150
+STYLE DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
+CAPTION "More information"
+FONT 8, "MS Shell Dlg", 0, 0, 1
+{
+    DEFPUSHBUTTON   "&Close", IDOK, 240, 130, 55, 15, 0, WS_EX_LEFT
+    LTEXT           "", IDC_IMPORTINFO_HEADER, 12, 12, 276, 18, 0, WS_EX_LEFT
+    LTEXT           "", IDC_IMPORTINFO_TEXT, 12, 36, 276, 92, 0, WS_EX_LEFT
+}
+
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDD_IMPORTSTATUS DIALOGEX 20, 40, 330, 25
+STYLE DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
+CAPTION "Importing"
+FONT 8, "MS Shell Dlg", 0, 0, 1
+{
+    LTEXT "Scanning:", IDC_STATIC, 7, 9, 55, 9, NOT WS_GROUP | SS_LEFT, WS_EX_LEFT
+    LTEXT "...",    IDC_IMPORTSTATUS_TEXT, 67, 9, 198, 9, NOT WS_GROUP | SS_LEFT, WS_EX_LEFT
+    DEFPUSHBUTTON   "&Cancel", IDCANCEL, 270, 5, 55, 15, 0, WS_EX_LEFT
 }
 
 
