update libsmacker to v1.2.0

--- a/Makefile.msvc
+++ b/Makefile.msvc
@@ -84,9 +84,7 @@ GAMEOBJS= \
 	$(SRC)\startwin_game.$o
 
 GAMEOBJS=$(GAMEOBJS) \
-	$(LIBSMACKERSRC)\smacker.$o \
-	$(LIBSMACKERSRC)\smk_bitstream.$o \
-	$(LIBSMACKERSRC)\smk_hufftree.$o
+	$(LIBSMACKERSRC)\smacker.$o
 
 EDITOROBJS=$(SRC)\whbuild.$o \
 	$(SRC)\buildres.$(res)
