partial adaptation from synctics-style timing
Good enough to play the game with smooth player movement and even-paced
timing. Adds mouselook toggle, other improvements of opportunity.
Removes F11 joystick calibration and F12 mouse sensitivity keys.
These can be adjusted in the OSD until I figure out a menu.

synctics todo:
 * drawweapons() > {castaorb,swingdaweapon}() > shootgun() > chunksofmeat()
 * monitor()
 * follow and map zoom keys

misc todo:
 * sprite interpolation
 * multiplayer parts

clock notes:
 totalclock - ticks continuously
 ototalclock - ticks by TICSPERFRAME when ready2send is true
 lockclock - movement clock, ticks by TICSPERFRAME during domovethings

 whani - movement clock timed
 whfx - called per frame, lots of movement-clock-based timers
 whobj - monitor() called per frame, processobjs() per movement clock

--- a/Makefile.deps
+++ b/Makefile.deps
@@ -1,4 +1,4 @@
-icorp_h=$(SRC)/icorp.h $(ENGINEINC)/build.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/cache1d.h $(ENGINEINC)/baselayer.h $(SRC)/names.h $(SRC)/sndmod.h $(SRC)/les.h $(SRC)/jeff.h $(SRC)/raf.h $(SRC)/whdefs.h $(SRC)/keydefs.h
+icorp_h=$(SRC)/icorp.h $(ENGINEINC)/build.h $(ENGINEINC)/pragmas.h $(ENGINEINC)/cache1d.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/mmulti.h $(SRC)/names.h $(SRC)/sndmod.h $(SRC)/les.h $(SRC)/jeff.h $(SRC)/raf.h $(SRC)/whdefs.h $(SRC)/keydefs.h
 
 $(SRC)/b5compat.$o: $(SRC)/b5compat.c $(ENGINEINC)/build.h
 $(SRC)/config.$o: $(SRC)/config.c $(ENGINEINC)/compat.h $(ENGINEINC)/osd.h $(ENGINEINC)/scriptfile.h $(ENGINEINC)/baselayer.h $(ENGINEINC)/winlayer.h $(icorp_h)
