--- a/Makefile.msvc
+++ b/Makefile.msvc
@@ -114,6 +114,9 @@ all: whaven$(EXESUFFIX) build$(EXESUFFIX) ;
 
 whaven$(EXESUFFIX): $(GAMEOBJS) $(ENGINEROOT)\$(ENGINELIB) $(AUDIOLIBROOT)\$(JFAUDIOLIB)
 	$(LINK) /OUT:$@ /SUBSYSTEM:WINDOWS $(LINKFLAGS) $(OURLINKFLAGS) $** $(JFAUDIOLIB_LINKFLAGS) $(OURLIBS)
+!if DEFINED(XAUDIO2REDIST)
+	copy $(XAUDIO2REDIST)\bin\xaudio2_9redist.dll .
+!endif
 
 build$(EXESUFFIX): $(EDITOROBJS) $(ENGINEROOT)\$(ENGINELIB) $(ENGINEROOT)\$(EDITORLIB)
 	$(LINK) /OUT:$@ /SUBSYSTEM:WINDOWS $(LINKFLAGS) $(OURLINKFLAGS) $** $(OURLIBS)
